python-app01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app01-deployment
  labels:
    app: python-app01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app01
  template:
    metadata:
      labels:
        app: python-app01
    spec:
      containers:
      - name: python-app01
        image: ronsonblossom/python-app01:1.0.0
        ports:
        - containerPort: 8000
