python-app01/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-app01-service
spec:
  selector:
    app: python-app01
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
